added endpoint for querying the whole eventhub; fixed bug with 1 active message shown on empty hubs; fixed pmap extension to be properly execute on session scoped beans; removed redundant dependencies and updated kotlin version; minor tweaks of receiver parameters;
